Header alignment on tablet fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -151,12 +151,6 @@ body {
     text-align:center;
     max-width: 100%;
 
-    @media @tablet {
-        -webkit-order: 2;
-        -ms-flex-order: 2;
-        order: 2;
-        text-align: left;
-    }
 }
 
 .widget.companyname {
@@ -174,12 +168,6 @@ body {
     -webkit-align-self: auto;
     -ms-flex-item-align: auto;
     align-self: auto;
-
-    @media @tablet {
-        -webkit-order: 3;
-        -ms-flex-order: 3;
-        order: 3;
-        }
 }
 
 
@@ -198,13 +186,6 @@ body {
     -webkit-align-self: auto;
     -ms-flex-item-align: auto;
     align-self: auto;
-
-    @media @tablet {
-        -webkit-order: 1;
-        -ms-flex-order: 1;
-        order: 1;
-        width: 100%;
-    }
 }
 
 
